Added functionality so that links on main page open on new tabs

--- a/saas_app/templates/index.html
+++ b/saas_app/templates/index.html
@@ -17,7 +17,7 @@
         <div class="card-body">
           <h5 class="card-title">{% trans "Software as a Service Request Form" %}</h5>
           <p class="card-text">{% trans "Please fill out this form if you would like to request the purchase of an unclassified software subscription service." %}</p>
-          <a href="submit_request" class="btn btn-primary">{% trans "Start" %}</a>
+          <a href="submit_request" class="btn btn-primary" target="_blank">{% trans "Start" %}</a>
         </div>
       </div>
       <br>
@@ -28,7 +28,7 @@
         <div class="card-body">
           <h5 class="card-title">{% trans "View your submitted requests" %}</h5>
           <p class="card-text">{% trans "Click here to view all of your submitted SAAS requests." %}</p>
-          <a href="submit_request/view" class="btn btn-primary">{% trans "Start" %}</a>
+          <a href="submit_request/view" class="btn btn-primary" target="_blank">{% trans "Start" %}</a>
         </div>
       </div>
       <br>
@@ -40,7 +40,7 @@
       <div class="card-body">
         <h5 class="card-title">{% trans "Manager - Approve/Deny requests" %}</h5>
         <p class="card-text">{% trans "For manager, click here to approve/deny existing requests." %}</p>
-        <a href="approve/view" class="btn btn-primary">{% trans "Start" %}</a>
+        <a href="approve/view" class="btn btn-primary" target="_blank">{% trans "Start" %}</a>
       </div>
     </div>
     <br>
@@ -51,7 +51,7 @@
         <div class="card-body">
           <h5 class="card-title">{% trans "View your previously reviewed requests" %}</h5>
           <p class="card-text">{% trans "Click here to view all requests that you have previously reviewed." %}</p>
-          <a href="approve/view_prev" class="btn btn-primary">{% trans "Start" %}</a>
+          <a href="approve/view_prev" class="btn btn-primary" target="_blank">{% trans "Start" %}</a>
         </div>
       </div>
     <br>
@@ -63,7 +63,7 @@
       <div class="card-body">
         <h5 class="card-title">{% trans "View requests that need your action" %}</h5>
         <p class="card-text">{% trans "For internal ops, click here to view requests that require action, such as selecting S32 approver or recording a purchase." %}</p>
-        <a href="internal_ops/view" class="btn btn-primary">{% trans "Start" %}</a>
+        <a href="internal_ops/view" class="btn btn-primary" target="_blank">{% trans "Start" %}</a>
       </div>
     </div>
     <br>
@@ -74,7 +74,7 @@
         <div class="card-body">
           <h5 class="card-title">{% trans "View your previously reviewed requests" %}</h5>
           <p class="card-text">{% trans "Click here to view all requests that you have previously reviewed." %}</p>
-          <a href="internal_ops/view_prev" class="btn btn-primary">{% trans "Start" %}</a>
+          <a href="internal_ops/view_prev" class="btn btn-primary" target="_blank">{% trans "Start" %}</a>
         </div>
       </div>
     <br>
@@ -86,7 +86,7 @@
       <div class="card-body">
         <h5 class="card-title">{% trans "Approve/Deny requests" %}</h5>
         <p class="card-text">{% trans "For S32 Approver - click here to approve or deny requests." %}</p>
-        <a href="approve/view_s32" class="btn btn-primary">{% trans "Start" %}</a>
+        <a href="approve/view_s32" class="btn btn-primary" target="_blank">{% trans "Start" %}</a>
       </div>
     </div>
     <br>
@@ -97,7 +97,7 @@
       <div class="card-body">
       <h5 class="card-title">{% trans "View your previously reviewed requests" %}</h5>
         <p class="card-text">{% trans "Click here to view all requests that you have previously reviewed." %}</p>
-        <a href="approve/view_s32_prev" class="btn btn-primary">{% trans "Start" %}</a>
+        <a href="approve/view_s32_prev" class="btn btn-primary" target="_blank">{% trans "Start" %}</a>
       </div>
       </div>
     {% endif %}
