--- a/saas_app/templates/base.html
+++ b/saas_app/templates/base.html
@@ -89,6 +89,7 @@
                   <a class="dropdown-item" href="{% url 'switch_role' %}?role=Manager">{% trans "Manager" %}</a>
                   <a class="dropdown-item" href="{% url 'switch_role' %}?role=InternalOps">{% trans "Internal Ops" %}</a>
                   <a class="dropdown-item" href="{% url 'switch_role' %}?role=S32Approver">{% trans "S32 Approver" %}</a>
+                  <a class="dropdown-item" href="{% url 'switch_role' %}?role=Admin">{% trans "Admin" %}</a>
                 </div>
               </li>
             <li class="nav-item">
