Adding a function to restore all groups. It is needed for testing

--- a/saas_app/templates/administration/view_user.html
+++ b/saas_app/templates/administration/view_user.html
@@ -8,7 +8,7 @@
 
 
 {% block content %}
-<h1>{% trans "View User" %}</h1>
+<h1>{% trans "View User Details" %}</h1>
 <form method="post" novalidate>
         {% csrf_token %}
         {% crispy form %}
