Adding files to generate an auto incrementing case number. We are using the primary key for this case in the model

--- a/saas_app/templates/approve/view_request.html
+++ b/saas_app/templates/approve/view_request.html
@@ -11,6 +11,7 @@
 <h1>{% trans "Software as a Service Request Submission" %}</h1>
 <form method="post" novalidate>
         {% csrf_token %}
+        <p><b>{% trans "Case number:" %} {{form.instance.id}}</b></p>
         {% crispy form %}
 </form>
 
