--- a/saas_app/templates/internal_ops/view_request.html
+++ b/saas_app/templates/internal_ops/view_request.html
@@ -10,6 +10,7 @@
 {% block content %}
 <h1>{% trans "Software as a Service Request Submission" %}</h1>
 <form method="post">
+        <p><b>{% trans "Case number:" %} {{form.instance.id}}</b></p>
         {% csrf_token %}
         {% crispy form %}
 </form>
