Changing the role from admin to administrator

--- a/saas_app/templates/index.html
+++ b/saas_app/templates/index.html
@@ -100,7 +100,7 @@
         <a href="approve/view_s32_prev" class="btn btn-primary" target="_blank">{% trans "Start" %}</a>
       </div>
       </div>
-    {% elif role == "Admin" %}
+    {% elif role == "Administrator" %}
        <div class="card">
       <div class="card-header">
         {% trans "Change User's Data" %}
