--- a/saas_app/templates/index.html
+++ b/saas_app/templates/index.html
@@ -118,7 +118,7 @@
       </div>
       <div class="card-body">
         <h5 class="card-title">{% trans "View External SAAS logins" %}</h5>
-        <p class="card-text">{% trans "View external SAAS logins that have been executed with google account." %}</p>
+        <p class="card-text">{% trans "View external SAAS logins that have been executed with a google account." %}</p>
         <a href="administration/view_logs" class="btn btn-primary" target="_blank">{% trans "Start" %}</a>
       </div>
     </div>
