Google workspace logs integration (#193)
* Adding logic to query the log the sentinel logs to display the information

* Adding updated requirements.txt file

* Adding pandas

* Adding an extra a at the end of the description

* Adding updated requirements and configured the sentinel app proprly to connect

* Adding no text wrapping to display data better

* Linting code

--- a/saas_app/templates/index.html
+++ b/saas_app/templates/index.html
@@ -111,6 +111,17 @@
         <a href="administration/view" class="btn btn-primary" target="_blank">{% trans "Start" %}</a>
       </div>
     </div>
+    <br>
+    <div class="card">
+      <div class="card-header">
+        {% trans "View SAAS logins" %}
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">{% trans "View External SAAS logins" %}</h5>
+        <p class="card-text">{% trans "View external SAAS logins that have been executed with a google account." %}</p>
+        <a href="administration/view_logs" class="btn btn-primary" target="_blank">{% trans "Start" %}</a>
+      </div>
+    </div>
     {% endif %}
 {% else %}
     <h1>{% trans "Sass Procurement App" %}</h1>
