--- a/saas_app/templates/index.html
+++ b/saas_app/templates/index.html
@@ -112,6 +112,7 @@
       </div>
     </div>
     <br>
+    {% elif role == "ManageSaas" %}
     <div class="card">
       <div class="card-header">
         {% trans "View SAAS logins" %}
@@ -119,7 +120,7 @@
       <div class="card-body">
         <h5 class="card-title">{% trans "View External SAAS logins" %}</h5>
         <p class="card-text">{% trans "View external SAAS logins that have been executed with a google account." %}</p>
-        <a href="administration/view_logs" class="btn btn-primary" target="_blank">{% trans "Start" %}</a>
+        <a href="manage_saas/view_logs" class="btn btn-primary">{% trans "Start" %}</a>
       </div>
     </div>
     {% endif %}
