Adding changes as requested by internal Ops

--- a/saas_app/templates/detail.html
+++ b/saas_app/templates/detail.html
@@ -14,7 +14,7 @@
   </div>
   <div class="card-body">
     <h4 class="card-title">{% trans "Detailed information about the SAAS request" %}</h4>
-    <p class="card-text"><b>{% trans "Name:" %}</b> {{saas_request.name}} </p>
+    <p class="card-text"><b>{% trans "Name of Saas:" %}</b> {{saas_request.name}} </p>
     <p class="card-text"><b>{% trans "Description:" %}</b> {{saas_request.description}} </p>
     <p class="card-text"><b>{% trans "URL:" %}</b> {{saas_request.url}} </p>
     <p class="card-text"><b>{% trans "Cost:" %}</b> {{saas_request.cost}} </p>
