--- a/saas_app/templates/internal_ops/view_all_prev_requests.html
+++ b/saas_app/templates/internal_ops/view_all_prev_requests.html
@@ -12,7 +12,7 @@
   <table class="table table-hover table-bordered">
     <thead>
         <tr>
-          <th scope="col">{% trans "Name" %}</th>
+          <th scope="col">{% trans "Name of Saas" %}</th>
           <th scope="col">{% trans "Description" %}</th>
           <th scope="col">{% trans "Url" %}</th>
           <th scope="col">{% trans "Cost" %}</th>
@@ -44,7 +44,7 @@
   <table class="table table-hover table-bordered">
     <thead>
         <tr>
-          <th scope="col">{% trans "Name" %}</th>
+          <th scope="col">{% trans "Name of Saas" %}</th>
           <th scope="col">{% trans "Description" %}</th>
           <th scope="col">{% trans "Url" %}</th>
           <th scope="col">{% trans "Cost" %}</th>
