--- a/saas_app/templates/training/training_thanks.html
+++ b/saas_app/templates/training/training_thanks.html
@@ -8,6 +8,6 @@
 {% block content %}
     <h1>{% trans "Thank you for submitting your Training Form!" %}</h1>
     <p>{% trans "Your manager has received notification of the form and will review it. If approved, the form will go to the S32 Approver to be signed and finalized. Throughout the process you will receive notifications of the progress of your training form." %}</p>
-    <embed height="100%" width="100%"  name="plugin" src="hello.pdf" type="application/pdf">
+    <embed height="100%" width="100%"  name="plugin" src={filename} type="application/pdf">
 
 {% endblock %}
