Adding french translations to the training form

--- a/saas_app/templates/training/training_request.html
+++ b/saas_app/templates/training/training_request.html
@@ -15,7 +15,7 @@
         {% crispy user_form %}
         {% crispy course_form %}
         {% crispy form %}
-        <button type="button submit" class="btn btn-primary">Submit</button>
-        <button type="button" class="btn btn-primary" onclick="history.back()">Back</button>
+        <button type="button submit" class="btn btn-primary">{% trans "Submit" %}</button>
+        <button type="button" class="btn btn-primary" onclick="history.back()">{% trans "Back" %}</button>
 </form>
 {% endblock %}
