--- a/saas_app/templates/training/view_request.html
+++ b/saas_app/templates/training/view_request.html
@@ -15,6 +15,6 @@
         {% crispy user_form %}
         {% crispy course_form %}
         {% crispy form %}
-        <button type="button" class="btn btn-primary" onclick="history.back()">Back</button>
+        <button type="button" class="btn btn-primary" onclick="history.back()">{% trans "Back" %}</button>
 </form>
 {% endblock %}
