Adding option to download completed form from the submitted requests

--- a/saas_app/static/saas_app/css/styles.css
+++ b/saas_app/static/saas_app/css/styles.css
@@ -49,6 +49,14 @@ ul {
   }
 }
 
+tbody, td, tfoot, th, thead, tr {
+  border-color: inherit;
+  border-style: solid;
+  border-width: 0;
+  max-width: 650px;
+  word-wrap: break-word;
+}
+
 ol,
 ul {
   padding-left: 30px;
