--- a/saas_app/templates/training/view_all_requests.html
+++ b/saas_app/templates/training/view_all_requests.html
@@ -19,6 +19,7 @@
                 <th scope="col">{% trans "Cost" %}</th>
                 <th scope="col">{% trans "Date Submitted" %}</th>
                 <th scope="col">{% trans "Status" %}</th>
+                <th scope="col">{% trans "Download PDF" %}</th>
               <tbody class="table-group-divider"></tbody>
               </tr>
             </thead>
@@ -30,10 +31,17 @@
                 <td>{{ request.course.cost }}</td>
                 <td>{{ request.date_submitted }}</td>
                 <td>{% trans request.status %}</td>
-            </tr>
+                <td><button type="button" class="btn-lg btn-primary" onclick="window.location.href='{% url 'training_request:download' %}?pk={{ request.pk }}'">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+                  <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"/>
+                  <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+                  </svg> 
+                  {% trans "Download form" %}
+                  </button></td>
+              </tr>
             {% endfor %}
-          </tbody>
-    </table>
+            </tbody>
+            </table>
     {% endif %}
     <br>
     {% if prev_submitted_requests %}
@@ -65,5 +73,5 @@
     {% if not submitted_requests and not prev_submitted_requests %}
       <p>{% trans "You have no submitted requests." %}</p>
     {% endif %}
-    <button type="button" class="btn btn-primary" name="home" onclick="location.href='{% url 'home' %}'">{% trans "Cancel" %}</button>
+    <button type="button" class="btn btn-primary" style="max-w name="home" onclick="location.href='{% url 'home' %}'">{% trans "Cancel" %}</button>
 {% endblock %}
